jf-drawer alignment - Fixed jf drawer css

--- a/src/directives/jf_drawers/jf_drawer.less
+++ b/src/directives/jf_drawers/jf_drawer.less
@@ -11,7 +11,7 @@
 
     .icon-small-arrow-down {
       transform: rotate(0deg) scale(1.2);
-      margin: 0 10px;
+      margin: 0 10px 0 auto;
 
       &.drawer-arrow-close {
         transform: rotate(-90deg) scale(1.2);
@@ -36,7 +36,7 @@
   }
 
   .drawer-content {
-    padding: 20px 0 20px 30px;
+    padding: 15px 0 0;
     overflow: hidden;
     transition: height .2s ease-in-out;
     // drawer in drawer
